--- a/poc_camera/Views/Home/Index.cshtml
+++ b/poc_camera/Views/Home/Index.cshtml
@@ -27,16 +27,19 @@
                 <div id="webcam-container" class="webcam-container col-12 d-none" >
                     <div style="position: absolute; left: 0; right: 0; top: 0; bottom: 0; display: flex; justify-content: center;">
                         <video id="webcam" autoplay playsinline></video>
-                        <!--<canvas id="canvas" class="d-none"></canvas>-->
+                       
                     </div>
                     <div class="flash"></div>
                     <audio id="snapSound" src="audio/snap.wav" preload="auto"></audio>
                  </div>
                 <div class="webcam-overlay">
+                    <div class="slidecontainer"><input type="range" min="1" max="100" value="50" class="slider" id="myRange"></div>
                     <div id="cameraControls" class="cameraControls">
                         <a href="#" id="exit-app" title="Exit App" class="d-none" style="display: inline-block;"><i class="material-icons">exit_to_app</i></a>
                         <a href="#" id="take-photo" title="Take Photo" style="display: inline-block;"><i class="material-icons">camera_alt</i></a>
+                        <a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>
                     </div>
+                    <canvas id="canvas" class="d-none" style="display: none;"></canvas>
                 </div>
             </div>
         </div>
