--- a/poc_camera/Views/Home/Index.cshtml
+++ b/poc_camera/Views/Home/Index.cshtml
@@ -33,11 +33,14 @@
                     <audio id="snapSound" src="audio/snap.wav" preload="auto"></audio>
                  </div>
                 <div class="webcam-overlay">
-                    <div class="slidecontainer"><input type="range" min="1" max="100" value="0" class="slider" id="myRange"></div>
+                    <div class="slidecontainer">
+                        <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
+                        <p class="d-none" id="results"></p>
+                    </div>
                     <div id="cameraControls" class="cameraControls">
                         <a href="#" id="exit-app" title="Exit App" class="d-none" style="display: inline-block;"><i class="material-icons">exit_to_app</i></a>
                         <a href="#" id="take-photo" title="Take Photo" style="display: inline-block;"><i class="material-icons">camera_alt</i></a>
-                        <a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>
+                        <!--<a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>-->
                     </div>
                     <canvas id="canvas" class="d-none" style="display: none;"></canvas>
                 </div>
