--- a/poc_camera/Views/Home/Index.cshtml
+++ b/poc_camera/Views/Home/Index.cshtml
@@ -41,6 +41,7 @@
                         <a href="#" id="exit-app" title="Exit App" class="d-none" style="display: inline-block;"><i class="material-icons">exit_to_app</i></a>
                         <a href="#" id="take-photo" title="Take Photo" style="display: inline-block;"><i class="material-icons">camera_alt</i></a>
                         <!--<a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>-->
+                        <a href="#" id="cameraFlip" title="Flip Camera" class="d-none"><i class="material-icons">camera_front</i></a>
                     </div>
                     <canvas id="canvas" class="d-none" style="display: none;"></canvas>
                 </div>
