--- a/poc_camera/Views/Home/Index.cshtml
+++ b/poc_camera/Views/Home/Index.cshtml
@@ -33,15 +33,53 @@
                     <audio id="snapSound" src="audio/snap.wav" preload="auto"></audio>
                  </div>
                 <div class="webcam-overlay">
+                    <!--
                     <div class="slidecontainer">
                         <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
                         <p class="d-none" id="results"></p>
                     </div>
+                    -->
+                    <a href="#" id="exit-app" style="align-self: flex-end;" class="btn-image">
+                        <img src="../images/close.png" style="width: 28px; height: 28px; object-fit: contain;"/>
+                    </a>
                     <div id="cameraControls" class="cameraControls">
-                        <a href="#" id="exit-app" title="Exit App" class="d-none" style="display: inline-block;"><i class="material-icons">exit_to_app</i></a>
-                        <a href="#" id="take-photo" title="Take Photo" style="display: inline-block;"><i class="material-icons">camera_alt</i></a>
+                        <a href="#" id="take-photo" class="btn-image">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="90" height="90" viewBox="0 0 90 90">
+                                <g transform="translate(-150 -563)">
+                                    <circle cx="39" cy="39" r="39" transform="translate(156 569)" class="fill-base" />
+                                    <path d="M45,2A43.012,43.012,0,0,0,28.263,84.622,43.012,43.012,0,0,0,61.737,5.378,42.729,42.729,0,0,0,45,2m0-2A45,45,0,1,1,0,45,45,45,0,0,1,45,0Z" transform="translate(150 563)" fill="#fff" />
+                                </g>
+                            </svg>
+                        </a>
+
                         <!--<a href="#" id="download-photo" download="selfie.png" target="_blank" title="Save Photo" class="d-none"><i class="material-icons">file_download</i></a>-->
-                        <!--<a href="#" id="cameraFlip" title="Flip Camera" class="d-none"><i class="material-icons">camera_front</i></a>-->
+                        <div class="zoom-options-container">
+                            <div data-zoom="1" class="btn-image zoom-option active">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+                                    <g transform="translate(-140 -692)">
+                                        <circle cx="15" cy="15" r="15" transform="translate(140 692)" class="fill-base" />
+                                        <text transform="translate(140 695)" fill="#fff" font-size="18" font-family="Lato-Bold, Lato" font-weight="700"><tspan x="5.757" y="18">1</tspan><tspan y="18" font-size="12">X</tspan></text>
+                                    </g>
+                                </svg>
+                            </div>
+                            <div data-zoom="2" style="margin: 0 10px;" class="btn-image zoom-option">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+                                    <g transform="translate(-140 -692)">
+                                        <circle cx="15" cy="15" r="15" transform="translate(140 692)" class="fill-default" />
+                                        <text transform="translate(140 695)" fill="#000" font-size="18" font-family="Lato-Bold, Lato" font-weight="700"><tspan x="5.757" y="18">2</tspan><tspan y="18" font-size="12">X</tspan></text>
+                                    </g>
+                                </svg>
+                            </div>
+                            <div data-zoom="3" style="align-self: flex-end;" class="btn-image zoom-option">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+                                    <g transform="translate(-140 -692)">
+                                        <circle cx="15" cy="15" r="15" transform="translate(140 692)" class="fill-default" />
+                                        <text transform="translate(140 695)" fill="#000" font-size="18" font-family="Lato-Bold, Lato" font-weight="700"><tspan x="5.757" y="18">3</tspan><tspan y="18" font-size="12">X</tspan></text>
+                                    </g>
+                                </svg>
+                            </div>
+
+                        </div>
                     </div>
                     <canvas id="canvas" class="d-none" style="display: none;"></canvas>
                 </div>
