--- a/poc_camera/wwwroot/css/site.css
+++ b/poc_camera/wwwroot/css/site.css
@@ -2,6 +2,16 @@
 for details on configuring this project to bundle and minify static web assets. */
 :root {
     --base: #2695f9;
+    --black: #000;
+    --dark-gray: #606060;
+    --green: #1EAA8C;
+    --green-inactive: rgba(135,205,190,1);
+    --light-gray: #F0F0F0;
+    --red: #FF465A;
+    --white: #fff;
+    --yellow: #FFE15A;
+    --filter-green: invert(44%) sepia(32%) saturate(5382%) hue-rotate(141deg) brightness(104%) contrast(76%);
+    --filter-white: brightness(0) invert(1);
 }
 
 body {
@@ -40,18 +50,7 @@ body {
     }
 }
 
-:root {
-    --black: #000;
-    --dark-gray: #606060;
-    --green: #1EAA8C;
-    --green-inactive: rgba(135,205,190,1);
-    --light-gray: #F0F0F0;
-    --red: #FF465A;
-    --white: #fff;
-    --yellow: #FFE15A;
-    --filter-green: invert(44%) sepia(32%) saturate(5382%) hue-rotate(141deg) brightness(104%) contrast(76%);
-    --filter-white: brightness(0) invert(1);
-}
+
 
 .input-container {
     margin: 0 auto;
@@ -176,6 +175,21 @@ body {
     flex: 1;
     text-transform: uppercase;
     border: none;
+}
+
+.btn-primary {
+    background-color: var(--base);
+    border-color: var(--base);
+}
+
+.btn-primary:hover {
+    background-color: var(--base);
+    border-color: var(--base);
+}
+
+.btn-primary:active, .btn-primary:active:hover {
+    background-color: var(--base);
+    border-color: var(--base);
 }
 
 @media (max-width: 640px) {
@@ -368,6 +382,21 @@ input.input::-ms-input-placeholder {
     padding: 20px;
 }
 
+.result-overlay {
+    background-color: rgba(0,0,0,0.16);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
 .md-modal {
     margin: auto;
     position: fixed;
@@ -424,7 +453,7 @@ input.input::-ms-input-placeholder {
 
 .md-effect-12 .md-content h3,
 .md-effect-12 .md-content {
-    background: transparent;
+    /* background: transparent; */
 }
 
 .md-show.md-effect-12 .md-content {
@@ -587,6 +616,10 @@ input.input::-ms-input-placeholder {
     fill: var(--base);
 }
 
+.stroke-base {
+    stroke: var(--base);
+}
+
 .zoom-options-container {
     padding: 4px;
     border-radius: 40px;
@@ -598,4 +631,108 @@ input.input::-ms-input-placeholder {
 
 .zoom-option {
     height: 30px;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.d-none {
+    display: none;
+}
+
+@keyframes loading-1 {
+    0% { opacity: 1; }
+    12.5% { opacity: 0.9; }
+    25% { opacity: 0.8; }
+    37.5% { opacity: 0.7; }
+    50% { opacity: 0.6; }
+    62.5% { opacity: 0.5; }
+    75% { opacity: 0.4; }
+    87.5% { opacity: 0.3; }
+    100% { opacity: 1; }
+}
+
+@keyframes loading-2 {
+    0% { opacity: 0.9; }
+    12.5% { opacity: 0.8; }
+    25% { opacity: 0.7; }
+    37.5% { opacity: 0.6; }
+    50% { opacity: 0.5; }
+    62.5% { opacity: 0.4; }
+    75% { opacity: 0.3; }
+    87.5% { opacity: 1; }
+    100% { opacity: 0.9; }
+}
+
+@keyframes loading-3 {
+    0% { opacity: 0.8; }
+    12.5% { opacity: 0.7; }
+    25% { opacity: 0.6; }
+    37.5% { opacity: 0.5; }
+    50% { opacity: 0.4; }
+    62.5% { opacity: 0.3; }
+    75% { opacity: 1; }
+    87.5% { opacity: 0.9; }
+    100% { opacity: 0.8; }
+}
+
+@keyframes loading-4 {
+    0% { opacity: 0.7; }
+    12.5% { opacity: 0.6; }
+    25% { opacity: 0.5; }
+    37.5% { opacity: 0.4; }
+    50% { opacity: 0.3; }
+    62.5% { opacity: 1; }
+    75% { opacity: 0.9; }
+    87.5% { opacity: 0.8; }
+    100% { opacity: 0.7; }
+}
+
+@keyframes loading-5 {
+    0% { opacity: 0.6; }
+    12.5% { opacity: 0.5; }
+    25% { opacity: 0.4; }
+    37.5% { opacity: 0.3; }
+    50% { opacity: 1; }
+    62.5% { opacity: 0.9; }
+    75% { opacity: 0.8; }
+    87.5% { opacity: 0.7; }
+    100% { opacity: 0.6; }
+}
+
+@keyframes loading-6 {
+    0% { opacity: 0.5; }
+    12.5% { opacity: 0.4; }
+    25% { opacity: 0.3; }
+    37.5% { opacity: 1; }
+    50% { opacity: 0.9; }
+    62.5% { opacity: 0.8; }
+    75% { opacity: 0.7; }
+    87.5% { opacity: 0.6; }
+    100% { opacity: 0.5; }
+}
+
+@keyframes loading-7 {
+    0% { opacity: 0.4; }
+    12.5% { opacity: 0.3; }
+    25% { opacity: 1; }
+    37.5% { opacity: 0.9; }
+    50% { opacity: 0.8; }
+    62.5% { opacity: 0.7; }
+    75% { opacity: 0.6; }
+    87.5% { opacity: 0.5; }
+    100% { opacity: 0.4; }
+}
+
+@keyframes loading-8 {
+    0% { opacity: 0.3; }
+    12.5% { opacity: 1; }
+    25% { opacity: 0.9; }
+    37.5% { opacity: 0.8; }
+    50% { opacity: 0.7; }
+    62.5% { opacity: 0.6; }
+    75% { opacity: 0.5; }
+    87.5% { opacity: 0.4; }
+    100% { opacity: 0.3; }
 }
