fix crop image problem

--- a/poc_camera/Views/Home/Index.cshtml
+++ b/poc_camera/Views/Home/Index.cshtml
@@ -124,5 +124,5 @@
                     </div>
                 </div>
             </div>
-        <div class="md-overlay"></div>
+        </div>
 </main>
